Uploaded backlog of files

--- a/_posts/2021-06-10-Lousy.md
+++ b/_posts/2021-06-10-Lousy.md
@@ -18,7 +18,7 @@ length: "5072"
 explicit: "no" 
 keywords: "minecraft"
 block: "no" 
-voices: "OGBUBBY, titaniumcow, Datbrrto, Chephadrom, Spaciergiant"
+voices: "SonOfDemise, Fun4TheWholeFam, Lousysmousy"
 ---
 
 **Lousy stars on the TG Podcast with hosts SonOfDemise and Fun4TheWholeFam!**
